--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,11 @@
     <%= f.text_field :login%>
   </div>
 
+<!--   <div class="field">
+    <%= f.label :login %><br />
+    <%= f.text_field :login%>
+  </div> -->
+
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
