--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -46,14 +46,14 @@
 		
 			<tr data-item_id="<%= i.id %>">
 				<td> <%= i.id %> </td>
-				<td> <%= i.login%> </td>
+				<td> <%= link_to i.login, user_path(i) %> </td>
 				<td> <%= i.company_name%> </td>
 				<td> <%= i.contact_fio%> </td>
 				<td> <%= i.telephone%> </td>
 				<td> <%= i.site_name%> </td>
 				<td> <%= i.description%> </td>
 				<td> <%= i.updated_at%> </td>
-				<td><%= link_to "Удалить", edit_user_registration_path(i, current_user.admin == true), method: :delete, data: { confirm: "Точно удалить?" }%></td> 
+				<td><%= link_to "Удалить", user_path(i, current_user.admin == true), method: :delete, data: { confirm: "Точно удалить?" }%></td> 
 			</tr>
 
 		<% end %>
