--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,10 +14,25 @@
     <%= f.text_field :login%>
   </div>
 
-<!--   <div class="field">
-    <%= f.label :login %><br />
-    <%= f.text_field :login%>
-  </div> -->
+  <div class="field">
+    <%= f.label :company_name %><br />
+    <%= f.text_field :company_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :contact_fio %><br />
+    <%= f.text_field :contact_fio %>
+  </div>
+
+  <div class="field">
+    <%= f.label :telephone %><br />
+    <%= f.text_field :telephone %>
+  </div>
+
+  <div class="field">
+    <%= f.label :site_name %><br />
+    <%= f.text_field :site_name %>
+  </div>
 
   <div class="field">
     <%= f.label :password %>
