--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,9 +21,14 @@
            </button>
            <a class="navbar-brand" href="/">Главная</a>
         </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/tickets/new">Создать задачу <span class="sr-only">(current)</span></a></li>
+            <li><a href="/users/new">Создать аккаунт</a></li>
+          </ul>
         <ul class = "nav navbar-nav navbar-right">
             <% if current_user %>   
-              <li><%= current_user.email %></li>
+              <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
               <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete  %></li>   
             <% else%>   
               <li><%= link_to 'Sign in', new_user_session_path %></li>
