--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -6,15 +6,14 @@
 	<li> Статус: <%= @ticket.status %></li>
 </ul>
 
+<% if user_signed_in? && current_user.admin == true %>   
+	<%= link_to "Редактировать", edit_ticket_path, class: "btn btn-default" %>
+<% end %> 
+
 <h2>Comments</h2>
 <% @ticket.comments.each do |f| %>
   <p>
-    <%= f.user %>
-  </p>
- 
-  <p>
-    <strong>Comment:</strong>
-    <%= f.body %>
+    <%= f.user %>: <%= f.body %>
   </p>
 <% end %>
 
