--- a/app/views/tickets/new.html.slim
+++ b/app/views/tickets/new.html.slim
@@ -5,5 +5,7 @@
 	  = f.text_field :title
 	  p Описание:
 	  = f.text_area :content
+	  p Описание:
+	  = f.file_field :file
 	  br
 	  = f.submit "Создать задачу"
